added tag line to home page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+> *A jurney to master the craft of codeing...* :computer:
 
 This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
