--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home">
 <blockquote>
-  <p><em>A jurney to master the craft of codeing…</em> <img class="emoji" title=":computer:" alt=":computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4bb.png" height="20" width="20"></p>
+  <p>A jurney to master the craft of codeing… <img class="emoji" title=":computer:" alt=":computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4bb.png" height="20" width="20"></p>
 </blockquote>
 
 <p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
