--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-> A jurney to master the craft of codeing... :computer:
+*A jurney to master the craft of codeing...* :computer:
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+![]({{site.baseurl}}/images/learn-quote-by-gandhi.jpg)
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
 
-You can edit the `index.html` file to change this content.
+# Hello, I'm Parag.
+
+Lorem ipsum dolor sit amet. Est repudiandae sequi eos veritatis molestiae et distinctio adipisci quo suscipit assumenda in iure omnis id quos error aut voluptas molestias! Aut totam porro ut provident laborum in odio ullam vel quasi praesentium. Aut voluptas labore id voluptas ipsam ut asperiores laborum ea veniam fuga id amet nostrum est magni aperiam. Ut atque nemo hic cupiditate architecto id laudantium dolores cum quia placeat.
+
 
 # Posts
