deploy: 9df75dc44e66002d41a7f589c760da286056cbb3

--- a/index.html
+++ b/index.html
@@ -92,17 +92,13 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home">
-<blockquote>
-  <p>A jurney to master the craft of codeing… <img class="emoji" title=":computer:" alt=":computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4bb.png" height="20" width="20"></p>
-</blockquote>
+<p><em>A jurney to master the craft of codeing…</em> <img class="emoji" title=":computer:" alt=":computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4bb.png" height="20" width="20"></p>
 
-<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+<p><img src="/devnotes/images/learn-quote-by-gandhi.jpg" alt=""></p>
 
-<p><img src="/devnotes/images/diagram.png" alt="" title="https://github.com/fastai/fastpages"></p>
+<h1 id="hello-im-parag">Hello, I’m Parag.</h1>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p>Lorem ipsum dolor sit amet. Est repudiandae sequi eos veritatis molestiae et distinctio adipisci quo suscipit assumenda in iure omnis id quos error aut voluptas molestias! Aut totam porro ut provident laborum in odio ullam vel quasi praesentium. Aut voluptas labore id voluptas ipsam ut asperiores laborum ea veniam fuga id amet nostrum est magni aperiam. Ut atque nemo hic cupiditate architecto id laudantium dolores cum quia placeat.</p>
 
 <h1 id="posts">Posts</h1>
 
