updated intro writeup on home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ image: images/logo.png
 
 # Hello, I'm Parag.
 
-Lorem ipsum dolor sit amet. Est repudiandae sequi eos veritatis molestiae et distinctio adipisci quo suscipit assumenda in iure omnis id quos error aut voluptas molestias! Aut totam porro ut provident laborum in odio ullam vel quasi praesentium. Aut voluptas labore id voluptas ipsam ut asperiores laborum ea veniam fuga id amet nostrum est magni aperiam. Ut atque nemo hic cupiditate architecto id laudantium dolores cum quia placeat.
-
+Welcome to my blog. It is my attempt to document the learnings while tinkering with different technologies. I love building products, coding and tinkering with different technologies. I work at EVO Power where I focus on developing software for battery energy storage systems. A few of my interests are programming, tech, investing, music and spirituality.
 
 # Posts
