--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ image: images/logo.png
 
 # Hello, I'm Parag.
 
-Welcome to my blog. It is my attempt to document the learnings while tinkering with different technologies. I love building products, coding and tinkering with different technologies. I work at EVO Power where I focus on developing software for battery energy storage systems. A few of my interests are programming, tech, investing, music and spirituality.
+Welcome to my blog. It's an attempt to document the learnings while tinkering with technologies. I love building products, coding and solving problems using technology. 
+I work at EVO Power, focusing on developing software for battery energy storage systems. A few of my interests are programming, tech, investing, music and spirituality.
 
 # Posts
