--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ window.onload = wrap_img;
 
 <h1 id="hello-im-parag">Hello, I’m Parag.</h1>
 
-<p>Welcome to my blog. It is my attempt to document the learnings while tinkering with different technologies. I love building products, coding and tinkering with different technologies. I work at EVO Power where I focus on developing software for battery energy storage systems. A few of my interests are programming, tech, investing, music and spirituality.</p>
+<p>Welcome to my blog. It’s an attempt to document the learnings while tinkering with technologies. I love building products, coding and solving problems using technology. 
+I work at EVO Power, focusing on developing software for battery energy storage systems. A few of my interests are programming, tech, investing, music and spirituality.</p>
 
 <h1 id="posts">Posts</h1>
 
