--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ window.onload = wrap_img;
 
 <h1 id="hello-im-parag">Hello, I’m Parag.</h1>
 
-<p>Welcome to my blog. It’s an attempt to document the learnings while tinkering with technologies. I love building products, coding and solving problems using technology. 
-I work at EVO Power, focusing on developing software for battery energy storage systems. A few of my interests are programming, tech, investing, music and spirituality.</p>
+<h4 id="welcome-to-my-blog-its-an-attempt-to-document-the-learnings-while-tinkering-with-technologies-i-love-building-products-coding-and-solving-problems-using-technology">Welcome to my blog. It’s an attempt to document the learnings while tinkering with technologies. I love building products, coding and solving problems using technology.</h4>
+<h4 id="i-work-at-evo-power-focusing-on-developing-software-for-battery-energy-storage-systems-a-few-of-my-interests-are-programming-tech-investing-music-and-spirituality">I work at EVO Power, focusing on developing software for battery energy storage systems. A few of my interests are programming, tech, investing, music and spirituality.</h4>
 
 <h1 id="posts">Posts</h1>
 
